Fix number font problem.

--- a/beamerthemeCoventry.sty
+++ b/beamerthemeCoventry.sty
@@ -59,8 +59,8 @@
 \setbeamercolor{section in sidebar}{fg=white}
 \setbeamercolor{subsection in sidebar}{fg=white}
 
-\usepackage[T1]{fontenc}
-\usepackage[default, osfigures]{opensans}
+%\usepackage[T1]{fontenc}
+%\usepackage[default, osfigures]{opensans}
 
 \usepackage{transparent}
 \usebackgroundtemplate{
