Modify math font.

--- a/beamerthemeCoventry.sty
+++ b/beamerthemeCoventry.sty
@@ -17,6 +17,8 @@
 \let\@@magyar@captionfix\relax
 \makeatother
 
+\usefonttheme{professionalfonts}
+
 \DeclareOptionBeamer{width}
 {\PassOptionsToPackage{width=#1}{beamerouterthemesidebar}}
 
