Add Green color && Modify example images.

--- a/beamerthemeCoventry.sty
+++ b/beamerthemeCoventry.sty
@@ -42,7 +42,8 @@
 
 % ---------------Global Color Settings----------------------------
 \definecolor{whucolor}{RGB}{0 114 198}%Blue
-%\definecolor{whucolor}{RGB}{1 168 156}%Green
+%\definecolor{whucolor}{RGB}{1 168 156}%Cyan
+%\definecolor{whucolor}{RGB}{0 128 0}%Green
 %\definecolor{whucolor}{RGB}{249 105 14}%Orange
 %\definecolor{whucolor}{RGB}{102 51 153}%Purple
 %\definecolor{whucolor}{RGB}{150 40 26}%Red
@@ -87,6 +88,7 @@
 \setbeamertemplate{enumerate item}[circle]
 \setbeamertemplate{enumerate subitem}[circle]
 \setbeamercolor{block title}{bg=whucolor,fg=white}
+\setbeamercolor{block title example}{fg=whucolor}
 
 \makeatletter
 \setbeamercolor{myfootlinetext}{fg=whucolor}
