--- a/test.tex
+++ b/test.tex
@@ -54,7 +54,7 @@
 	    	\item 编译方式为：xelatex -> biber -> xelatex*2
 	    \end{itemize}
     \item 请参考 \LaTeX 和 Beamer 用户文档 
-    \item 内置五种主题颜色（蓝、绿、橙、紫、红），默认采用蓝色
+    \item 内置六种主题颜色（蓝、青、绿、橙、紫、红），默认采用蓝色
     \item 默认长宽比为16:10，提供16:9与4:3选项对应的背景水印排布方式
   \end{itemize}
 \end{frame}
